Fix overflow issue with recruit sim

--- a/css/recruit-sim.css
+++ b/css/recruit-sim.css
@@ -9,7 +9,7 @@
     gap: 20px;
     
     width: 90%;
-    height: 300px;
+    flex-basis: 300px;
     border-radius: 12px;
 
     background: repeating-linear-gradient(
